# DelftX_ROS1x_hrwros

./: README.md  robot_system.gazebo.xacro
hrwros/: README.md
hrwros/hrwros_msgs/: CMakeLists.txt
hrwros/hrwros_msgs/msg/: BoxHeightInformation.msg  CounterWithDelayActionFeedback.msg  CounterWithDelayActionResult.msg  CounterWithDelayFeedback.msg  ObjectDetection.msg  RobotTrajectories.msg  TargetToolPoses.msg
hrwros/hrwros_msgs/srv/: ConvertMetresToFeet.srv
hrwros/hrwros_utilities/: package.xml  setup.py
hrwros/hrwros_utilities/scripts/: spawn_object_once.py
hrwros_factory_behaviors/behaviors/behavior_final_project/: CMakeLists.txt  package.xml  setup.py
hrwros_factory_behaviors/behaviors/behavior_pick_part_from_conveyor/: CMakeLists.txt  package.xml  setup.py
hrwros_factory_behaviors/flexbe_behaviors/: CMakeLists.txt  package.xml
hrwros_factory_behaviors/flexbe_behaviors/behaviors/: behavior_final_project.xml  behavior_pick_part_from_conveyor.xml
hrwros_factory_states/: CMakeLists.txt  package.xml  setup.py
hrwros_factory_states/src/hrwros_factory_states/: compute_grasp_state.py  control_feeder_state.py  detect_part_camera_state.py  locate_factory_device_state.py  move_base_state.py  moveit_to_joints_dyn_state.py  set_conveyor_power_state.py  vacuum_gripper_control_state.py
hrwros_gazebo/: CMakeLists.txt  README.md  package.xml
hrwros_gazebo/config/: conveyor_object.yaml  conveyor_objects.yaml  conveyor_objects_moving.yaml  r1_joint_state_controller.yaml  r2_joint_state_controller.yaml  robot1_controller.yaml  robot2_controller.yaml
hrwros_gazebo/include/hrwros_gazebo/: conveyor_spawner.h  urdf_creator.h
hrwros_gazebo/include/hrwros_gazebo/plugins/: ARIAC.hh  ConveyorBeltPlugin.hh  ObjectDisposalPlugin.hh  ROSConveyorBeltPlugin.hh  ROSLogicalCameraPlugin.hh  ROSProximityRayPlugin.hh  ROSVacuumGripperPlugin.hh
hrwros_gazebo/launch/: hrwros_environment.launch  hrwros_pick_demo.launch  hrwros_pick_demo2.launch  set_psm_logger.launch  spawn_robots.launch  spawn_static_world_objects.launch  spawn_turtlebot.launch
hrwros_gazebo/meshes/conveyor_objects/: box.stl  disk.stl  gear.stl  piston_rod.stl
hrwros_gazebo/models/conveyor/: model.config  model.sdf
hrwros_gazebo/models/conveyor/meshes/: conveyor.dae
hrwros_gazebo/models/logical_camera1/: model.sdf
hrwros_gazebo/models/logical_camera2/: model.sdf
hrwros_gazebo/msg/: ConveyorBeltState.msg  DetectedObject.msg  Kit.msg  KitObject.msg  KitTray.msg  Order.msg  TrayContents.msg
hrwros_gazebo/param/: readme.txt
hrwros_gazebo/scripts/: env_setup.bash
hrwros_gazebo/src/: conveyor_spawner.cpp  conveyor_spawner_node.cpp  urdf_creator.cpp  urdf_creator_test.cpp
hrwros_gazebo/src/plugins/: ConveyorBeltPlugin.cc  ObjectDisposalPlugin.cc  ProximityRayPlugin.cc  ROSConveyorBeltPlugin.cc  ROSLogicalCameraPlugin.cc  ROSProximityRayPlugin.cc  ROSVacuumGripperPlugin.cc  SideContactPlugin.cc  VacuumGripperPlugin.cc
hrwros_gazebo/srv/: AGVControl.srv  ConveyorBeltControl.srv
hrwros_gazebo/worlds/: hrwros.world
hrwros_msgs/: package.xml
hrwros_msgs/action/: CounterWithDelay.action
hrwros_msgs/msg/: CounterWithDelayAction.msg  CounterWithDelayActionGoal.msg  CounterWithDelayGoal.msg  CounterWithDelayResult.msg  SensorInformation.msg
hrwros_support/: CMakeLists.txt  package.xml
hrwros_support/config/: hrwros.rviz
hrwros_support/launch/: load_hrwros.launch  visualize_hrwros.launch
hrwros_support/meshes/break_beam/collision/: hokuyo.dae
hrwros_support/meshes/conveyor_objects/collision/: gasket.stl
hrwros_support/meshes/conveyor_objects/visual/: piston_rod.stl  pulley.stl
hrwros_support/meshes/vacuum_gripper/collision/: vacuum_gripper.dae
hrwros_support/urdf/: hrwros.xacro  hrwros_archive.xacro
hrwros_support/urdf/break_beam/: break_beam.gazebo.xacro  break_beam.urdf.xacro  break_beam.xacro
hrwros_support/urdf/depth_camera/: depth_camera.gazebo.xacro  depth_camera.urdf.xacro  depth_camera.xacro
hrwros_support/urdf/logical_camera/: logical_camera.urdf.xacro  logical_camera.xacro
hrwros_support/urdf/robot_pedestal/: robot1_pedestal.xacro  robot2_pedestal.xacro  robot_pedestal.urdf.xacro
hrwros_support/urdf/robot_system/: robot_system.gazebo.xacro  robot_system.urdf.xacro  robot_system.xacro
hrwros_support/urdf/vacuum_gripper/: vacuum_gripper.gazebo.xacro  vacuum_gripper.urdf.xacro  vacuum_gripper.xacro
hrwros_support/urdf/workcell/: workcell.gazebo.xacro  workcell.urdf.xacro  workcell.xacro
hrwros_week2/: CMakeLists.txt  package.xml  readme.md
hrwros_week2/config/: assignment1.rviz  assignment2.rviz  assignment3.rviz  view_robot.rviz
hrwros_week2/launch/: visualize_hrwros_assignment1.launch  visualize_hrwros_assignment2.launch  visualize_hrwros_assignment3.launch
hrwros_week2/launch/replacement_robot/: load_week2_robot.launch  view_week2_replacement_robot.launch
hrwros_week2/urdf/: hrwros_assignment1.xacro  hrwros_assignment2.xacro  hrwros_assignment3.xacro
hrwros_week2/urdf/include/: common_materials.xacro
hrwros_week2/urdf/robot/: lrmate200ic.xacro  lrmate200ic_macro.xacro
hrwros_week3/: CMakeLists.txt  package.xml
hrwros_week3/config/: map_factory_v1.pgm  map_factory_v1.yaml
hrwros_week3/launch/: week3_assignment3_part1.launch  week3_assignment3_part2.launch
hrwros_week3/scripts/: create_unknown_obstacles.py  week3_assignment3_part1.py  week3_assignment3_part2.py
hrwros_week4/: CMakeLists.txt  package.xml
hrwros_week4/launch/: week4_assignment3.launch
hrwros_week4/scripts/: hrwros_moveit_commander_cmdline  simple_pick_place.py  week4_assignment2_script  week4_assignment3.py
hrwros_week5/: CMakeLists.txt  package.xml
hrwros_week5/config/: turtlebot_object.yaml
hrwros_week5/launch/: set_move_base_logger.launch  spawn_turtlebot_week5.launch  week5_environment.launch
hrwros_week5/scripts/: robot_squabblers.py  transform_object_pose.py  week5_assignment3.py
hrwros_week5/urdf/: hexagons.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro
hrwros_week6/: CMakeLists.txt  package.xml
hrwros_week6/launch/: hrwros_final_project.launch
(+57 files in other folders)
