<?xml version="1.0"?>
<package format="2">
  <name>hrwros_msgs</name>
  <version>0.0.0</version>
  <description>Messages, Services and Actions for the hrwros ROS packages</description>
  <maintainer email="bruce@wayne.ba">Mukunda Bharatheesha</maintainer>
  <author email="bruce@wayne.ba">Mukunda Bharatheesha</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>


</package>
