<?xml version="1.0"?>
<package>
  <name>hrwros_support</name>
  <version>0.1.1</version>
  <description>The hrwros_support package</description>

  <author>marip8</author>
  <maintainer email="donnie@todo.todo">donnie</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
