cmake_minimum_required(VERSION 2.8.3)
project(hrwros_week5)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  tf2_ros
  tf2_geometry_msgs
)
